# leeloo

./: .gitignore  README.md  aarch64.dockerfile  aarch64_jazzy.dockerfile  aarch64_prod.dockerfile  build_docker.sh  docker_entrypoint.sh  my.repos  package.xml  start_docker.sh  x86.dockerfile
.github/workflows/: weekly-docker-build.yml
launch/: leeloo.launch.py
leeloo/: CMakeLists.txt  package.xml  setup.cfg  setup.py
leeloo/config/: cameras.yaml  leeloo_curobo.yaml  leeloo_world.yaml  profile.xml
leeloo/include/leeloo/: execute_trajectory.hpp
leeloo/launch/: bringup_leeloo.launch.py
leeloo/src/: execute_trajectory.cpp  voxel_map_publisher.cpp
leeloo/urdf/: leeloo.urdf  leeloo_structure.urdf
leeloo_calibration/: README.md  package.xml  setup.cfg  setup.py
leeloo_calibration/config/: calibration_poses.yaml  kinect_hand_eye_result.yaml
leeloo_calibration/leeloo_calibration/: auto_calibration_server.py  auto_calibration_server_v2.py  auto_calibration_server_v3.py  kinect_tf_computation_node.py  manual_tf_calibration_node.py  pose_generator_node.py  pose_saver_node.py
leeloo_calibration/object_lidar_calib/: README.md  package.xml  setup.cfg  setup.py
leeloo_calibration/object_lidar_calib/object_lidar_calib/: Calibration_node.py  prism_detector_node.py
leeloo_msgs/: CMakeLists.txt  package.xml  setup.cfg  setup.py
leeloo_msgs/action/: RunCalibration.action
leeloo_msgs/object_lidar_calib_msgs/: CMakeLists.txt  package.xml
leeloo_msgs/object_lidar_calib_msgs/msg/: PrismDetection.msg
ridgeback_ros2/: package.xml  setup.cfg  setup.py
ridgeback_ros2/ridgeback_ros2/: ridgeback_twiststamped.py
