<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>object_lidar_calib</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="robot@todo.todo">robot</maintainer>
  <license>TODO: License declaration</license>

  <depend>object_lidar_calib_msgs</depend>
  <depend>python3-numpy</depend>
  <depend>python3-opencv</depend>
  <depend>python3-sklearn</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
